# eptium-python

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  babel.config.js  codecov.yml  package.json  pyproject.toml  pytest.ini  tsconfig.tsbuildinfo  webpack.config.js
.github/workflows/: publish.yml
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
eptium/: _version.py  widget.py
eptium/labextension/: package.json
eptium/labextension/static/: 122.b1bca534d9ea67fec489.js  509.234648a425e7f4a55f6d.js  remoteEntry.5db8ee62571757d56855.js
eptium/nbextension/: index.js  index.js.map
examples/: introduction.ipynb
schema/: plugin.json
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
