[build-system]
requires = [
    "hatchling>=1.21.1",
    "jupyterlab>=4.0.0,<5",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "eptium"
dynamic = ["version"]
description = "A jupyter widget to display COPC and COGS data from Eptium."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Ognyan Moore", email = "ogi@hobu.co" }]
keywords = ["IPython", "Jupyter", "Widgets"]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["ipywidgets>=7.0.0", "jupyter"]

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = ["nbval", "pytest-cov", "pytest>=6.0"]

[project.urls]
Homepage = "https://github.com/hobuinc/eptium-python"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
artifacts = [
    "eptium/nbextension/index.*",
    "eptium/labextension/*.tgz",
    "eptium/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"eptium/nbextension" = "share/jupyter/nbextensions/eptium"
"eptium/labextension" = "share/jupyter/labextensions/eptium"
"./install.json" = "share/jupyter/labextensions/eptium/install.json"
"./eptium.json" = "etc/jupyter/nbconfig/notebook.d/eptium.json"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.version]
path = "eptium/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "eptium/nbextension/index.js",
    "eptium/labextension/package.json",
]
skip-if-exists = [
    "eptium/nbextension/index.js",
    "eptium/labextension/package.json",
]
dependencies = ["hatch-jupyter-builder>=0.8.3"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = ["jlpm"]
